# xdr-rpc

./: Cargo.toml  README.md
src/: lib.rs  xdr_codec.rs  xdr_rpc.rs
